--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -12,33 +12,7 @@
         <title>Asset Store Start</title>
     </head>
 <body>
-    <div class="topnav">
-        <div class="lefttop">
-            <a><img src="icons/new-instagram-logo-white-border-icon-png-large.png"></a>
-            <a><img src="icons/twitter.png"></a>
-            <a><img src="icons/yt.png"></a>
-            <a><img src="icons/fb.png"></a>
-        </div>
-        <div class="righttop">
-            <a th:href="@{/contact}"><img src="icons/iconmonstr-email-3-240.png"></a>
-            <a th:href="@{/cart}"><img src="icons/cart.png"></a>
-            <a th:href="@{/account}"><img src="icons/account.png"></a>
-        </div>
-    </div>
-    <div class="middlenav">
-        <a th:href="@{/}"><img src="icons/Bez nazwy-2.png"></a>
-        <div class="search">
-            <input class="searchbar" type="text" placeholder="Search">
-            <i id="icon" class="fa fa-search"></i>
-        </div>
-    <div class="links">
-        <a th:href="@{/shop}">3D</a>
-        <a th:href="@{/shop}">2D</a>
-        <a th:href="@{/shop}">Audio</a>
-        <a th:href="@{/shop}">Code</a>
-        <a th:href="@{/shop}">Order</a>
-    </div>
-    </div>
+    <div th:replace="components/nav.html :: nav" id="nav-placeholder"></div>
 
     <div class="blackback">
         <div class="main">
