Modified footer to use thymeleaf insead of javaScript

--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -78,15 +78,6 @@
 
     </div>
 
-    <div id="footer-placeholder"></div>
-    <script>
-        fetch('components/footer.html')
-        .then(response => response.text())
-        .then(data => {
-            document.getElementById('footer-placeholder').innerHTML = data;
-        })
-        .catch(error => console.error('Error loading footer:', error)
-        );
-    </script>
+    <div th:replace="components/footer.html :: footer" id="footer-placeholder"></div>
 </body>
 </html>
