--- a/src/main/resources/templates/components/footer.html
+++ b/src/main/resources/templates/components/footer.html
@@ -1,4 +1,4 @@
-<footer>
+<footer th:fragment="footer">
     <div class="bottomnav">
         <div class="1"><img src="icons/facebook-like-logo-black-and-white-like-facebook-logo-black-gMzMue-clipart.png"><p>Over 11,000 five-star assets</p></div>
         <div class="2"><img src="icons/support.png"><p>Supported by 100,000+ forum members</p></div>
