--- a/src/main/resources/templates/components/nav.html
+++ b/src/main/resources/templates/components/nav.html
@@ -13,7 +13,7 @@
         </div>
     </div>
     <div class="middlenav">
-        <a href="@{/}"><img src="icons/Bez nazwy-2.png"></a>
+        <a th:href="@{/}"><img src="icons/Bez nazwy-2.png"></a>
         <div class="search">
             <input class="searchbar" type="text" placeholder="Search">
             <i id="icon" class="fa fa-search"></i>
