--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -52,6 +52,7 @@
 
     </div>
 
+    <!-- TODO: Make cart responsive -->
     <div class="rightside">
         <div class="order">
             <h1>To pay</h1>
@@ -69,7 +70,7 @@
 
         <div class="discount">
             <h1>Place discount code</h1>
-            <p>Type in or paste in discount code here</p>
+            <p>Type in or paste your discount code HERE</p>
             <div class="code">
                 <input type="text">
             </div>
