--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,7 +20,7 @@
     <p class="header">TOP POPULAR ASSETS</p>
 
 
-    
+    <!-- TODO: Replace static elements with templates index-->
     <div class="positions">
         <img src="icons/Warstwa 10.png">
         <img src="icons/Warstwa 29.png">
