--- a/src/main/resources/templates/shop.html
+++ b/src/main/resources/templates/shop.html
@@ -16,6 +16,7 @@
 <body>
   <div th:replace="components/nav.html :: nav" id="nav-placeholder"></div>
 
+  <!-- TODO: Replace static elements with templates shop-->
     <div class="center">
     <div class="positions-shop">
         <img src="icons/Warstwa 10.png">
@@ -36,9 +37,10 @@
         <img src="icons/Warstwa 9.png">
     </div>
 
+    <!-- TODO: Update filter-->
     <div class="nav-shop">
         <h1>All Categories</h1>
-        <div class="opcjon">
+        <div class="option">
             <label class="container">
             <p>3D (42794)</p>
             <input type="checkbox">
@@ -46,7 +48,7 @@
           </label>
     </div>
 
-    <div class="opcjon">
+    <div class="option">
         <label class="container">
         <p>2D (9281)</p>
         <input type="checkbox">
@@ -54,7 +56,7 @@
       </label>
 </div>
 
-<div class="opcjon">
+<div class="option">
     <label class="container">
     <p>Animations (804)</p>
     <input type="checkbox">
@@ -62,7 +64,7 @@
   </label>
 </div>
 
-<div class="opcjon">
+<div class="option">
     <label class="container">
     <p>Characters (12404)</p>
     <input type="checkbox">
@@ -70,7 +72,7 @@
   </label>
 </div>
 
-<div class="opcjon">
+<div class="option">
     <label class="container">
     <p>Environments (8677)</p>
     <input type="checkbox">
@@ -78,7 +80,7 @@
   </label>
 </div>
 
-<div class="opcjon">
+<div class="option">
     <label class="container">
     <p>Props (12893)</p>
     <input type="checkbox">
@@ -86,7 +88,7 @@
   </label>
 </div>
 
-<div class="opcjon">
+<div class="option">
     <label class="container">
     <p>Vegetation (1079)</p>
     <input type="checkbox">
@@ -94,7 +96,7 @@
   </label>
 </div>
 
-<div class="opcjon">
+<div class="option">
     <label class="container">
     <p>Vehicles (5427)</p>
     <input type="checkbox">
@@ -102,7 +104,7 @@
   </label>
 </div>
 
-<div class="opcjon">
+<div class="option">
     <label class="container">
     <p>Essentials (45)</p>
     <input type="checkbox">
@@ -110,7 +112,7 @@
   </label>
 </div>
 
-<div class="opcjon">
+<div class="option">
     <label class="container">
     <p>Templates (2925)</p>
     <input type="checkbox">
@@ -118,7 +120,7 @@
   </label>
 </div>
 
-<div class="opcjon">
+<div class="option">
     <label class="container">
     <p>Tools (9818)</p>
     <input type="checkbox">
@@ -126,7 +128,7 @@
   </label>
 </div>
 
-<div class="opcjon">
+<div class="option">
     <label class="container">
     <p>VFX (2989)</p>
     <input type="checkbox">
