--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -5,13 +5,28 @@
     box-sizing: border-box;
 }
 
+/* TODO: Change and use variables*/
 :root{
     --light: rgb(78, 73, 165);
     --dark: rgb(32, 29, 91);
+    --black: rgb(0, 0, 0);
+    --white: rgb(255, 255, 255);
+
+    --small-s-size: 2em;
+    --small-m-size: 2em;
+    --small-l-size: 2em;
+
+    --medium-s-size: 2em;
+    --medium-m-size: 2em;
+    --medium-l-size: 2em;
+
+    --large-s-size: 2em;
+    --large-m-size: 2em;
+    --large-l-size: 2em;
 }
 
 body{
-    background: black;
+    background: var(--black);
     min-height: 100vh;
     background-size: 100%;
     min-width: 100vw;
@@ -28,8 +43,7 @@ body{
 
 .topnav img{
     height: 4vh;
-    margin-top: 0.5vh;
-    margin-bottom: 0.5vh;
+    margin: 0.5vh 0;
     cursor: pointer;
 }
 
@@ -62,8 +76,7 @@ body{
 
 .middlenav img{
     height: 10vh;
-    margin-left: 2vw;
-    margin-right: 2vw;
+    margin: 0 2vw;
     float: left;
     cursor: pointer;
 }
@@ -76,7 +89,7 @@ body{
     outline: none;
     border: none;
     font-family: 'Agency FB', arial ;
-    font-size: 20pt;
+    font-size: var(--large-s-size);
     color: var(--light);
 }
 
@@ -103,8 +116,7 @@ body{
     width: auto;
     border-radius: 12px;
     padding-left: 1vw;
-    margin: auto 0;
-    margin-left: auto;
+    margin: auto auto;
     margin-right: 1vw;
     font-family: 'Agency FB', arial ;
     display: flex;
@@ -203,8 +215,7 @@ body{
     background: var(--light);
     width: 18vw;
     height: fit-content;
-    margin: 2vh 0;
-    margin-left: auto;
+    margin: 2vh auto;
     margin-right: 3vw;
     border-radius: 12px;
     display: flex;
@@ -223,8 +234,7 @@ body{
     color: var(--dark);
     background: white;
 }
-
-.opcjon{
+.option{
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -306,17 +316,13 @@ body{
     width: fit-content;
     height: fit-content;
     margin: 10vh auto;
-    padding: 12vh 6vw;
-    padding-top: 10vh;
-    padding-bottom: 7vh;
+    padding: 10vh 6vw 10vh 7vh;
     display: flex;
     flex-direction: row;
 }
 
 .head{
-    margin-top: -5vh;
-    margin-left: -4vw;
-    margin-bottom: 0vh;
+    margin: -5vh 0 0 -4vw;
     font-size: 50px;
     color: var(--light);
     font-weight: 580;
@@ -328,9 +334,8 @@ body{
     border: solid 3px var(--light);
     width: fit-content;
     height: fit-content;
-    margin: auto 0;
-    margin-right: 8vw;
-    margin-top: 5vh;
+    margin: 5vh 8vw 0 auto;
+
     overflow: hidden;
     background: white;
 }
@@ -392,8 +397,7 @@ iframe{
     outline: none;
     border: none;
     float: right;
-    margin-right: -2vw;
-    margin-top: 1vh;
+    margin: 1vh -2vw 0 0;
     cursor: pointer;
 }
 
@@ -412,15 +416,13 @@ iframe{
 }
 
 .main{
-    margin-right: 3vw;
-    margin-left: 3vw;
+    margin: 0 3vw;
 }
 
 .user{
     display: flex;
     flex-direction: row;
-    margin-top: 8vh;
-    margin-bottom: 7vh;
+    margin: 8vh 0 7vh 0;
     border-radius: 12px;
     border: 3px solid var(--light);
     padding: 20px;
@@ -443,8 +445,7 @@ iframe{
     font-size: 40pt;
     color: white;
     font-weight: 500;
-    margin-top: 4vh;
-    margin-bottom: 0.5vh;
+    margin: 4vh 0 0.5vh 0;
 }
 
 .avatar{
@@ -521,8 +522,7 @@ h2{
 .options p{
     color: white;
     font-size: 25pt;
-    margin-left: 2vw;
-    margin-bottom: -20px;
+    margin: 0 0 -20px 2vw;
 }
 
 .buying{
@@ -569,8 +569,7 @@ h2{
 
 .buy img{
     width: 185px;
-    margin: 0 1vw;
-    margin-bottom: 3vh;
+    margin: 0 1vw 3vh 0;
     justify-content: center;
     transform: scale(1);
     transition: all 0.3s ease-out;
@@ -595,8 +594,7 @@ h2{
     padding: 3vh 0.5vw;
     width: 40%;
     text-align: center;
-    margin: 2vh auto;
-    margin-bottom: 5vh;
+    margin: 2vh auto 5vh auto;
     cursor: pointer;
 }
 
@@ -651,7 +649,7 @@ h2{
 .contain {
     display: flex;
     position: relative;
-   padding-left: 30px;
+    padding-left: 30px;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
@@ -726,9 +724,7 @@ h2{
     transform: rotate(45deg);
   }
 
-/*.bin {
-    padding: 10px;
-}*/
+
 .bin .img-top {
     display: none;
     width: 2vw;
@@ -833,8 +829,7 @@ h2{
     border-radius: 12px;
     width: fit-content;
     padding: 1vh 10vw;
-    margin: 0 auto;
-    margin-top: 3vh;
+    margin: 3vh auto 0 auto;
     cursor: pointer;
 }
 
@@ -928,80 +923,7 @@ h2{
 
 
 
-
-@media screen and (max-width: 1621px) {
-.positions-shop{
-    grid-template-columns: auto auto auto auto;
-}
-
-.positions{
-    grid-template-columns: auto auto auto auto auto;
-}
-
-.cartback{
-    grid-template-columns: auto;
-}
-
-.buy{
-    grid-template-columns: auto;
-}
-
-}
-
-@media screen and (max-width: 1252px) {
-
-.blackback{
-    display: grid;
-    grid-template-rows: auto auto;
-    grid-template-columns: 50% 50%;
-}
-
-.main{
-    grid-column:span 2;
-    width: 80%;
-    margin: 0 auto;
-    
-}
-
-.selling{
-    margin-top: 2vw;
-    margin-left: 1vw;
-    width: 80%;
-    grid-row: 2;
-}
-
-.buying{
-    margin-top: 2vw;
-    margin-right: 1vh;
-    margin-left: auto;
-    padding-right: 2vw;
-    width: 80%;
-    grid-row: 2;
-}
-
-.searchbar{
-    width: 10vw;
-}
-
-.links a{
-    font-size: 30pt;
-}
-
-}
-
-@media screen and (max-width: 1236px) {
-
-    .positions-shop{
-        grid-template-columns: auto auto auto;
-    }
-    
-    .positions{
-        grid-template-columns: auto auto auto auto;
-    }
-
-    }
-
-    
+    /* TODO: Place appropriate @media and adjust them*/    
 
     @media screen and (max-width: 1351px) {
         
@@ -1011,20 +933,5 @@ h2{
         
         .links a{
             font-size: 40pt;
-        }
-    }
-
-    @media screen and (max-width: 976px) {
-        
-        .searchbar{
-            width: 8vw;
-        }
-        
-        .links a{
-            font-size: 25pt;
-        }
-
-        .positions{
-            grid-template-columns: auto auto auto;
         }
     }
