--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -14,6 +14,7 @@
 <body>
     <div th:replace="components/nav.html :: nav" id="nav-placeholder"></div>
 
+    <!-- TODO: Make account responsive-->
     <div class="blackback">
         <div class="main">
             <div class="user">
