--- a/src/main/resources/templates/components/nav.html
+++ b/src/main/resources/templates/components/nav.html
@@ -15,9 +15,11 @@
     <div class="middlenav">
         <a th:href="@{/}"><img src="icons/Bez nazwy-2.png"></a>
         <div class="search">
+            <!-- TODO: Make search bar work-->
             <input class="searchbar" type="text" placeholder="Search">
             <i id="icon" class="fa fa-search"></i>
         </div>
+    <!-- TODO: Diversyfy links goto-->
     <div class="links">
         <a th:href="@{/shop}">3D</a>
         <a th:href="@{/shop}">2D</a>
