--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -14,6 +14,7 @@
 <body>
     <div th:replace="components/nav.html :: nav" id="nav-placeholder"></div>
     
+    <!-- TODO: Add more content to contact us-->
     <div class="whiteback">
         <div>
             <p class="head">Contact Us!</p>
