--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -90,17 +90,19 @@ body{
     border: none;
     font-family: 'Agency FB', arial ;
     font-size: var(--large-s-size);
-    color: var(--light);
+    background-color: var(--white);
+    color: var(--dark);
 }
 
 .searchbar::-webkit-input-placeholder {
-    color: var(--light);
+    color: var(--dark);
+    
  }
 
 
 #icon{
     float: right;
-    color: var(--dark);
+    color: var(--light);
     font-size: 5vh;
     margin: auto 0;
     margin-left: auto;
@@ -108,9 +110,9 @@ body{
 }
 
 .search{
-    border: 2px solid var(--dark);
-    color: var(--dark);
-    font-style: var(--dark);
+    border: 2px solid var(--light);
+    color: var(--light);
+    font-style: var(--light);
     font-size: 20pt;
     height: 7vh;
     width: auto;
@@ -212,14 +214,24 @@ body{
 }
 
 .nav-shop{
-    background: var(--light);
+    background: var(--black);
     width: 18vw;
     height: fit-content;
     margin: 2vh auto;
     margin-right: 3vw;
+    border: 5px solid var(--light) ;
     border-radius: 12px;
+    padding: 1.5em;
     display: flex;
     flex-direction: column;
+}
+
+.input-holder{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+
 }
 
 .nav-shop h1{
@@ -234,18 +246,21 @@ body{
     color: var(--dark);
     background: white;
 }
-.option{
+
+/* TODO: Make hover effect on containers not only labels in shop filter*/
+.option {
     display: flex;
     flex-direction: row;
     align-items: center;
     margin-bottom: 1vh;
+    gap: 10px;
+    background: var(--dark);
 }
 
 .container {
     display: block;
     position: relative;
     padding-left: 35px;
-    margin-bottom: 12px;
     cursor: pointer;
     font-size: 22px;
     -webkit-user-select: none;
@@ -255,20 +270,23 @@ body{
   }
   
   .container input {
+    border-radius: 50%;
     position: absolute;
     opacity: 0;
     cursor: pointer;
-    height: 0;
-    width: 0;
   }
-  
+
+
   .checkmark {
     position: absolute;
-    top: 2.5px;
+    top: 50%;
+    transform: translate(0, -50%);
     left: 10px;
     height: 25px;
     width: 25px;
     background: white;
+    border: solid 4px var(--light);
+    border-radius: 12px;
   }
   
   .container:hover input ~ .checkmark {
@@ -276,7 +294,8 @@ body{
   }
   
   .container input:checked ~ .checkmark {
-    background: var(--dark);
+    background: var(--light);
+    border: solid 4px var(--light);
   }
   
   .checkmark:after {
@@ -290,10 +309,10 @@ body{
   }
   
   .container .checkmark:after {
-    left: 9px;
-    top: 5px;
-    width: 5px;
-    height: 10px;
+    left: 6px;
+    top: 3px;
+    width: 4px;
+    height: 9px;
     border: solid white;
     border-width: 0 3px 3px 0;
     -webkit-transform: rotate(45deg);
