--- a/src/main/resources/templates/shop.html
+++ b/src/main/resources/templates/shop.html
@@ -39,101 +39,116 @@
 
     <!-- TODO: Update filter-->
     <div class="nav-shop">
-        <h1>All Categories</h1>
+      <h1>Filter</h1>
+      <div class="cost">
+        <h3>Cost</h3>
+        <div class="input-holder">
+          <input type="number" name="" id="min-input" class="cost-input">
+          <h2>-</h2>
+          <input type="number" name="" id="max-input" class="cost-input">
+        </div>
+      </div>
+
+      <div class="rating">
+        <h3>Rating</h3>
+          <input type="range" min="0.5" max="5" step="0.5" name="" id="rating-input">
+      </div>
+
+        <h3>Categories</h3>
         <div class="option">
             <label class="container">
-            <p>3D (42794)</p>
-            <input type="checkbox">
-            <span class="checkmark"></span>
-          </label>
+              <input type="checkbox" checked="checked">
+              <span class="checkmark"></span>
+              <p>3D (42794)</p>
+            </label>
     </div>
 
     <div class="option">
         <label class="container">
-        <p>2D (9281)</p>
-        <input type="checkbox">
-        <span class="checkmark"></span>
-      </label>
+          <input type="checkbox">
+          <span class="checkmark"></span>
+          <p>2D (9281)</p>
+        </label>
+      </div>
+
+<div class="option">
+    <label class="container">
+      <input type="checkbox">
+      <span class="checkmark"></span>
+      <p>Animations (804)</p>
+    </label>
 </div>
 
 <div class="option">
     <label class="container">
-    <p>Animations (804)</p>
-    <input type="checkbox">
-    <span class="checkmark"></span>
-  </label>
+      <input type="checkbox">
+      <span class="checkmark"></span>
+      <p>Characters (12404)</p>
+    </label>
 </div>
 
 <div class="option">
     <label class="container">
-    <p>Characters (12404)</p>
-    <input type="checkbox">
-    <span class="checkmark"></span>
-  </label>
+      <input type="checkbox">
+      <span class="checkmark"></span>
+      <p>Environments (8677)</p>
+    </label>
 </div>
 
 <div class="option">
     <label class="container">
-    <p>Environments (8677)</p>
-    <input type="checkbox">
-    <span class="checkmark"></span>
-  </label>
+      <input type="checkbox">
+      <span class="checkmark"></span>
+      <p>Props (12893)</p>
+    </label>
 </div>
 
 <div class="option">
     <label class="container">
-    <p>Props (12893)</p>
-    <input type="checkbox">
-    <span class="checkmark"></span>
-  </label>
+      <input type="checkbox">
+      <span class="checkmark"></span>
+      <p>Vegetation (1079)</p>
+    </label>
 </div>
 
 <div class="option">
     <label class="container">
-    <p>Vegetation (1079)</p>
-    <input type="checkbox">
-    <span class="checkmark"></span>
-  </label>
+      <input type="checkbox">
+      <span class="checkmark"></span>
+      <p>Vehicles (5427)</p>
+    </label>
 </div>
 
 <div class="option">
     <label class="container">
-    <p>Vehicles (5427)</p>
-    <input type="checkbox">
-    <span class="checkmark"></span>
-  </label>
+      <input type="checkbox">
+      <span class="checkmark"></span>
+      <p>Essentials (45)</p>
+    </label>
 </div>
 
 <div class="option">
     <label class="container">
-    <p>Essentials (45)</p>
-    <input type="checkbox">
-    <span class="checkmark"></span>
-  </label>
+      <input type="checkbox">
+      <span class="checkmark"></span>
+      <p>Templates (2925)</p>
+    </label>
 </div>
 
 <div class="option">
     <label class="container">
-    <p>Templates (2925)</p>
-    <input type="checkbox">
-    <span class="checkmark"></span>
-  </label>
+      <input type="checkbox">
+      <span class="checkmark"></span>
+      <p>Tools (9818)</p>
+    </label>
 </div>
 
 <div class="option">
     <label class="container">
-    <p>Tools (9818)</p>
-    <input type="checkbox">
-    <span class="checkmark"></span>
-  </label>
-</div>
-
-<div class="option">
-    <label class="container">
-    <p>VFX (2989)</p>
-    <input type="checkbox">
-    <span class="checkmark"></span>
-  </label>
+      <input type="checkbox">
+      <span class="checkmark"></span>
+      <p>VFX (2989)</p>
+    </label>
 </div>
     </div>
 
