--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -226,6 +226,89 @@ body{
     flex-direction: column;
 }
 
+.range_container {
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+    margin: 1em auto;
+  }
+  
+  .sliders_control {
+    position: relative;
+    min-height: 50px;
+  }
+  
+  .form_control {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    font-size: 24px;
+    color: var(--white);
+    margin-bottom: 2rem;
+  }
+  
+  .sliders_control input::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    pointer-events: all;
+    width: 24px;
+    height: 24px;
+    background-color: var(--white);
+    border-radius: 50%;
+    box-shadow: 0 0 0 1px var(--dark);
+    cursor: pointer;
+  }
+  
+  .sliders_control input::-moz-range-thumb {
+    -webkit-appearance: none;
+    pointer-events: all;
+    width: 24px;
+    height: 24px;
+    background-color: #fff;
+    border-radius: 50%;
+    box-shadow: 0 0 0 1px #C6C6C6;
+    cursor: pointer;  
+  }
+  
+  .sliders_control input::-webkit-slider-thumb:hover {
+    background: var(--light);
+  }
+  
+  .sliders_control input::-webkit-slider-thumb:active {
+    box-shadow: inset 0 0 3px #387bbe, 0 0 9px #387bbe;
+    -webkit-box-shadow: inset 0 0 3px #387bbe, 0 0 9px #387bbe;
+  }
+  
+  input[type="number"] {
+    color: var(--light);
+    width: 50px;
+    height: 30px;
+    font-size: 20px;
+    border: none;
+    -moz-appearance: textfield;
+  }
+  
+  input[type=number]::-webkit-inner-spin-button, 
+  input[type=number]::-webkit-outer-spin-button {  
+     opacity: 1;
+     -webkit-appearance: none;
+    margin: 0;
+  }
+  
+  .sliders_control input {
+    -webkit-appearance: none; 
+    appearance: none;
+    height: 2px;
+    width: 100%;
+    position: absolute;
+    background-color: #C6C6C6;
+    pointer-events: none;
+  }
+  
+  #fromSlider {
+    height: 0;
+    z-index: 1;
+  }
+
 /* FIXME: Fix star selection aligment that is off */ 
 .rating {
     --dir: right;
@@ -235,7 +318,7 @@ body{
     --stars: 5;
     --starsize: 2.5rem;
     --symbol: var(--star);
-    --value: 1;
+    --value: 1.5;
     --w: calc(var(--stars) * var(--starsize));
     --x: calc(100% * (var(--value) / var(--stars)));
     block-size: var(--starsize);
