Turned off spring security

--- a/src/main/resources/templates/shop.html
+++ b/src/main/resources/templates/shop.html
@@ -16,6 +16,8 @@
 <body>
   <div th:replace="components/nav.html :: nav" id="nav-placeholder"></div>
 
+  <!--TODO: Add sort by -->
+
   <!-- TODO: Replace static elements with templates shop-->
     <div class="center">
     <div class="positions-shop">
