--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -12,7 +12,7 @@
         <title>Asset Store Start</title>
     </head>
 <body>
-    <div th:replace="components/nav.html :: nav" id="nav-placeholder"></div>
+    <div th:replace="~{fragments/nav.html :: nav}" id="nav-placeholder"></div>
 
     <!-- TODO: Make account responsive-->
     <div class="blackback">
@@ -54,6 +54,6 @@
 
     </div>
 
-    <div th:replace="components/footer.html :: footer" id="footer-placeholder"></div>
+    <div th:replace="~{fragments/footer.html :: footer}" id="footer-placeholder"></div>
 </body>
 </html>
