--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -12,7 +12,7 @@
         <title>Asset Store Start</title>
     </head>
 <body>
-    <div th:replace="components/nav.html :: nav" id="nav-placeholder"></div>
+    <div th:replace="~{fragments/nav.html :: nav}" id="nav-placeholder"></div>
 
     <div class="cartback">
 
@@ -79,6 +79,6 @@
 
     </div>
 
-    <div th:replace="components/footer.html :: footer" id="footer-placeholder"></div>
+    <div th:replace="~{fragments/footer.html :: footer}" id="footer-placeholder"></div>
 </body>
 </html>
