--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -12,7 +12,7 @@
         <title>Asset Store Start</title>
     </head>
 <body>
-    <div th:replace="components/nav.html :: nav" id="nav-placeholder"></div>
+    <div th:replace="~{fragments/nav.html :: nav}" id="nav-placeholder"></div>
     
     <!-- TODO: Add more content to contact us-->
     <div class="whiteback">
@@ -29,6 +29,6 @@
         </div>
     </div>
         
-    <div th:replace="components/footer.html :: footer" id="footer-placeholder"></div>
+    <div th:replace="~{fragments/footer.html :: footer}" id="footer-placeholder"></div>
 </body>
 </html>
