--- a/src/main/resources/templates/shop.html
+++ b/src/main/resources/templates/shop.html
@@ -14,11 +14,10 @@
     </head>
     
 <body>
-  <div th:replace="components/nav.html :: nav" id="nav-placeholder"></div>
+  <div th:replace="~{fragments/nav.html :: nav}" id="nav-placeholder"></div>
+<!--TODO: Add sort by -->
 
-  <!--TODO: Add sort by -->
-
-  <!-- TODO: Replace static elements with templates shop-->
+<!-- TODO: Replace static elements with templates shop-->
     <div class="center">
     <div class="positions-shop">
         <img src="icons/Warstwa 10.png">
@@ -41,107 +40,143 @@
 
     <!-- TODO: Update filter-->
     <div class="nav-shop">
-        <h1>All Categories</h1>
+      <h1>Filter</h1>
+      <div class="cost">
+        <h3>Cost</h3>
+        <!-- FIXME: Fix inputs range and steps so that they will accept decimals-->
+        <div class="range_container">
+          <div class="form_control">
+              <div class="form_control_container">
+                  <div class="form_control_container__time">Min</div>
+                  <input class="form_control_container__time__input" type="number" id="fromInput" value="10" min="0" max="100"/>
+              </div>
+              <div class="form_control_container">
+                  <div class="form_control_container__time">Max</div>
+                  <input class="form_control_container__time__input" type="number" id="toInput" value="40" min="0" max="100"/>
+              </div>
+          </div>
+          <div class="sliders_control">
+              <input id="fromSlider" type="range" value="10" min="0" max="100"/>
+              <input id="toSlider" type="range" value="40" min="0" max="100"/>
+          </div>
+      </div>
+      </div>
+
+      <div class="rating-holder">
+        <h3>Rating</h3>
+        <label class="rating-label">
+          <input
+            class="rating"
+            min="0.5"
+            max="5"
+            oninput="this.style.setProperty('--value', this.value)"
+            step="0.5"
+            type="range">
+        </label>
+      </div>
+
+        <h3>Categories</h3>
         <div class="option">
             <label class="container">
-            <p>3D (42794)</p>
-            <input type="checkbox">
-            <span class="checkmark"></span>
-          </label>
+              <input type="checkbox" checked="checked">
+              <span class="checkmark"></span>
+              <p>3D (42794)</p>
+            </label>
     </div>
 
     <div class="option">
         <label class="container">
-        <p>2D (9281)</p>
-        <input type="checkbox">
-        <span class="checkmark"></span>
-      </label>
+          <input type="checkbox">
+          <span class="checkmark"></span>
+          <p>2D (9281)</p>
+        </label>
+      </div>
+
+<div class="option">
+    <label class="container">
+      <input type="checkbox">
+      <span class="checkmark"></span>
+      <p>Animations (804)</p>
+    </label>
 </div>
 
 <div class="option">
     <label class="container">
-    <p>Animations (804)</p>
-    <input type="checkbox">
-    <span class="checkmark"></span>
-  </label>
+      <input type="checkbox">
+      <span class="checkmark"></span>
+      <p>Characters (12404)</p>
+    </label>
 </div>
 
 <div class="option">
     <label class="container">
-    <p>Characters (12404)</p>
-    <input type="checkbox">
-    <span class="checkmark"></span>
-  </label>
+      <input type="checkbox">
+      <span class="checkmark"></span>
+      <p>Environments (8677)</p>
+    </label>
 </div>
 
 <div class="option">
     <label class="container">
-    <p>Environments (8677)</p>
-    <input type="checkbox">
-    <span class="checkmark"></span>
-  </label>
+      <input type="checkbox">
+      <span class="checkmark"></span>
+      <p>Props (12893)</p>
+    </label>
 </div>
 
 <div class="option">
     <label class="container">
-    <p>Props (12893)</p>
-    <input type="checkbox">
-    <span class="checkmark"></span>
-  </label>
+      <input type="checkbox">
+      <span class="checkmark"></span>
+      <p>Vegetation (1079)</p>
+    </label>
 </div>
 
 <div class="option">
     <label class="container">
-    <p>Vegetation (1079)</p>
-    <input type="checkbox">
-    <span class="checkmark"></span>
-  </label>
+      <input type="checkbox">
+      <span class="checkmark"></span>
+      <p>Vehicles (5427)</p>
+    </label>
 </div>
 
 <div class="option">
     <label class="container">
-    <p>Vehicles (5427)</p>
-    <input type="checkbox">
-    <span class="checkmark"></span>
-  </label>
+      <input type="checkbox">
+      <span class="checkmark"></span>
+      <p>Essentials (45)</p>
+    </label>
 </div>
 
 <div class="option">
     <label class="container">
-    <p>Essentials (45)</p>
-    <input type="checkbox">
-    <span class="checkmark"></span>
-  </label>
+      <input type="checkbox">
+      <span class="checkmark"></span>
+      <p>Templates (2925)</p>
+    </label>
 </div>
 
 <div class="option">
     <label class="container">
-    <p>Templates (2925)</p>
-    <input type="checkbox">
-    <span class="checkmark"></span>
-  </label>
+      <input type="checkbox">
+      <span class="checkmark"></span>
+      <p>Tools (9818)</p>
+    </label>
 </div>
 
 <div class="option">
     <label class="container">
-    <p>Tools (9818)</p>
-    <input type="checkbox">
-    <span class="checkmark"></span>
-  </label>
-</div>
-
-<div class="option">
-    <label class="container">
-    <p>VFX (2989)</p>
-    <input type="checkbox">
-    <span class="checkmark"></span>
-  </label>
+      <input type="checkbox">
+      <span class="checkmark"></span>
+      <p>VFX (2989)</p>
+    </label>
 </div>
     </div>
 
     </div>
 
 
-    <div th:replace="components/footer.html :: footer" id="footer-placeholder"></div>
+    <div th:replace="~{fragments/footer.html :: footer}" id="footer-placeholder"></div>
+    <script src="/script.js"></script>
 </body>
 </html>
