Added image to product fragment

--- a/src/main/resources/templates/fragments/product.html
+++ b/src/main/resources/templates/fragments/product.html
@@ -1,6 +1,10 @@
 <div th:fragment="product(product)">
     <article class="product-card">
         <header class="product-card__header">
+            <!-- loop through product images and display them 
+             th:each="image : ${product.productImages}" 
+            <img th:src="@{${image.path}}" alt="Product Image"> -->
+            <img th:src="@{${product.productImages[0].path}}" alt="Product Image">
             <h2 class="product-card__title" th:text="${product.name}">Product Name</h2>
         </header>
         <section class="product-card__body">
