--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -1,23 +1,24 @@
 <nav>
     <div class="topnav">
         <div class="lefttop">
-            <a><img src="icons/new-instagram-logo-white-border-icon-png-large.png"></a>
-            <a><img src="icons/twitter.png"></a>
-            <a><img src="icons/yt.png"></a>
-            <a><img src="icons/fb.png"></a>
+            <a><img th:src="@{/icons/new-instagram-logo-white-border-icon-png-large.png}"></a>
+            <a><img th:src="@{/icons/twitter.png}"></a>
+            <a><img th:src="@{/icons/yt.png}"></a>
+            <a><img th:src="@{/icons/fb.png}"></a>
         </div>
         <div class="righttop">
-            <a th:href="@{/contact}"><img src="icons/iconmonstr-email-3-240.png"></a>
-            <a th:href="@{/cart}"><img src="icons/cart.png"></a>
-            <a th:href="@{/account}"><img src="icons/account.png"></a>
+            <a th:href="@{/contact}"><img th:src="@{/icons/iconmonstr-email-3-240.png}"></a>
+            <a th:href="@{/cart}"><img th:src="@{/icons/cart.png}"></a>
+            <a th:href="@{/account}"><img th:src="@{/icons/account.png}"></a>
         </div>
     </div>
     <div class="middlenav">
-        <a th:href="@{/}"><img src="icons/Bez nazwy-2.png"></a>
+        <a th:href="@{/}"><img th:src="@{/icons/Bez nazwy-2.png}"></a>
         <div class="search">
-            <!-- TODO: Make search bar work-->
-            <input class="searchbar" type="text" placeholder="Search">
-            <i id="icon" class="fa fa-search"></i>
+            <form action="/shop" method="GET">
+            <input class="searchbar" type="text" name="name" placeholder="Search">
+            <button type="submit" id="icon" class="fa fa-search"></button>
+            </form>
         </div>
     <!-- TODO: Diversyfy links goto-->
     <div class="links">
