Updated filter visuals

--- a/src/main/resources/templates/shop.html
+++ b/src/main/resources/templates/shop.html
@@ -37,6 +37,7 @@
         <img src="icons/Warstwa 9.png">
     </div>
 
+    <!-- TODO: Stash pop stash@{0} after merging with master branch -->
     <!-- TODO: Update filter-->
     <div class="nav-shop">
       <h1>Filter</h1>
