--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -215,27 +215,48 @@ body{
 
 .nav-shop{
     background: var(--black);
+    color: var(--white);
     width: 18vw;
     height: fit-content;
     margin: 2vh auto;
     margin-right: 3vw;
     border: 5px solid var(--light) ;
     border-radius: 12px;
-    padding: 1.5em;
+    padding: 10px;
     display: flex;
     flex-direction: column;
+}
+
+.nav-shop h1{
+    border: 5px solid var(--light) ;
+    border-radius: 12px;
+    padding: 10px 80px;
+    font-size: 40px;
+    margin: 0 auto;
+    margin-top: 20px;
+}
+
+.nav-shop h3{
+    margin-top: 20px;
 }
 
 .range_container {
     display: flex;
     flex-direction: column;
-    width: 80%;
-    margin: 1em auto;
+    margin: 0 auto;
+    background-color: var(--dark);
+    border: solid 4px var(--light);
+    border-radius: 12px;
+    padding: 20px;
+  }
+
+  .form_control_container__time{
+    color: var(--white);
   }
   
   .sliders_control {
     position: relative;
-    min-height: 50px;
+    min-height: 15px;
   }
   
   .form_control {
@@ -243,7 +264,7 @@ body{
     display: flex;
     justify-content: space-between;
     font-size: 24px;
-    color: var(--white);
+    color: var(--black);
     margin-bottom: 2rem;
   }
   
@@ -263,7 +284,7 @@ body{
     pointer-events: all;
     width: 24px;
     height: 24px;
-    background-color: #fff;
+    background-color: var(--black);
     border-radius: 50%;
     box-shadow: 0 0 0 1px #C6C6C6;
     cursor: pointer;  
@@ -280,7 +301,7 @@ body{
   
   input[type="number"] {
     color: var(--light);
-    width: 50px;
+    width: 80px;
     height: 30px;
     font-size: 20px;
     border: none;
@@ -323,6 +344,7 @@ body{
     --x: calc(100% * (var(--value) / var(--stars)));
     block-size: var(--starsize);
     inline-size: var(--w);
+    background-color: var(--dark);
     position: relative;
     touch-action: manipulation;
     -webkit-appearance: none;
@@ -356,7 +378,10 @@ body{
     display: block;
   }
   .rating-label {
-    margin-block-end: 1rem;
+    background-color: var(--dark);
+    border: solid 4px var(--light);
+    border-radius: 12px;
+    padding: 20px;
   }
   
   /* NO JS */
@@ -389,27 +414,18 @@ body{
 
 }
 
-.nav-shop h1{
-    color: white;
-    font-size: 40px;
-    margin: 25px auto;
-    border-radius: 12px;
-    cursor: pointer;
-}
-
-.nav-shop h1:hover{
-    color: var(--dark);
-    background: white;
-}
 
 /* TODO: Make hover effect on containers not only labels in shop filter*/
 .option {
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin-bottom: 1vh;
-    gap: 10px;
+    margin-bottom: 10px;
     background: var(--dark);
+}
+
+.option:last-child{
+    margin-bottom: 0;
 }
 
 .container {
