--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,31 +20,27 @@
     <p class="header">TOP POPULAR ASSETS</p>
 
 
-    <!-- TODO: Replace static elements with templates index-->
      <div class="products">
-         <div th:each="product : ${products}"> 
+         <div th:each="product : ${products}" class="fragment-products"> 
              <div th:replace="~{fragments/product.html :: product(${product})}"></div>
          </div>
+         <img class="positions-shop-img" src="icons/Warstwa 10.png">
+         <img class="positions-shop-img" src="icons/Warstwa 29.png">
+         <img class="positions-shop-img" src="icons/Warstwa 30.png">
+         <img class="positions-shop-img" src="icons/Warstwa 31.png">
+         <img class="positions-shop-img" src="icons/Warstwa 32.png">
+         <img class="positions-shop-img" src="icons/Warstwa 33.png">
+         <img class="positions-shop-img" src="icons/Warstwa 34.png">
+         <img class="positions-shop-img" src="icons/Warstwa 35.png">
+         <img class="positions-shop-img" src="icons/Warstwa 36.png">
+         <img class="positions-shop-img" src="icons/Warstwa 37.png">
+         <img class="positions-shop-img" src="icons/Warstwa 38.png">
+         <img class="positions-shop-img" src="icons/Warstwa 5.png">
+         <img class="positions-shop-img" src="icons/Warstwa 6.png">
+         <img class="positions-shop-img" src="icons/Warstwa 7.png">
+         <img class="positions-shop-img" src="icons/Warstwa 8.png">
+         <img class="positions-shop-img" src="icons/Warstwa 9.png">
      </div>
-
-    <div class="positions">
-        <img src="icons/Warstwa 10.png">
-        <img src="icons/Warstwa 29.png">
-        <img src="icons/Warstwa 30.png">
-        <img src="icons/Warstwa 31.png">
-        <img src="icons/Warstwa 32.png">
-        <img src="icons/Warstwa 33.png">
-        <img src="icons/Warstwa 34.png">
-        <img src="icons/Warstwa 35.png">
-        <img src="icons/Warstwa 36.png">
-        <img src="icons/Warstwa 37.png">
-        <img src="icons/Warstwa 38.png">
-        <img src="icons/Warstwa 5.png">
-        <img src="icons/Warstwa 6.png">
-        <img src="icons/Warstwa 7.png">
-        <img src="icons/Warstwa 8.png">
-        <img src="icons/Warstwa 9.png">
-    </div>
 
     <div th:replace="~{fragments/footer.html :: footer}" id="footer-placeholder"></div>
 </body>
