--- a/src/main/resources/templates/shop.html
+++ b/src/main/resources/templates/shop.html
@@ -16,39 +16,33 @@
 <body>
   <div th:replace="~{fragments/nav.html :: nav}" id="nav-placeholder"></div>
 <!--TODO: Add sort by -->
-
-<!-- TODO: Replace static elements with templates shop-->
-<div>
-<div th:if="${products.isEmpty()}" class="no-products">
-  <p>No products found.</p>
-</div>
-
-<div th:unless="${products.isEmpty()}" class="products">
-    <div th:each="product : ${products}"> 
-        <div th:replace="~{fragments/product.html :: product(${product})}"></div>
-    </div>
-  </div>
-</div>
-
     <div class="center">
-    <div class="positions-shop">
-        <img src="icons/Warstwa 10.png">
-        <img src="icons/Warstwa 29.png">
-        <img src="icons/Warstwa 30.png">
-        <img src="icons/Warstwa 31.png">
-        <img src="icons/Warstwa 32.png">
-        <img src="icons/Warstwa 33.png">
-        <img src="icons/Warstwa 34.png">
-        <img src="icons/Warstwa 35.png">
-        <img src="icons/Warstwa 36.png">
-        <img src="icons/Warstwa 37.png">
-        <img src="icons/Warstwa 38.png">
-        <img src="icons/Warstwa 5.png">
-        <img src="icons/Warstwa 6.png">
-        <img src="icons/Warstwa 7.png">
-        <img src="icons/Warstwa 8.png">
-        <img src="icons/Warstwa 9.png">
-    </div>
+
+      <div th:if="${products.isEmpty()}" class="no-products">
+        <p>No products found.</p>
+      </div>
+      
+      <div th:unless="${products.isEmpty()}" class="products">
+          <div th:each="product : ${products}" class="fragment-products"> 
+              <div th:replace="~{fragments/product.html :: product(${product})}"></div>
+          </div>
+          <img class="positions-shop-img" src="icons/Warstwa 10.png">
+          <img class="positions-shop-img" src="icons/Warstwa 29.png">
+          <img class="positions-shop-img" src="icons/Warstwa 30.png">
+          <img class="positions-shop-img" src="icons/Warstwa 31.png">
+          <img class="positions-shop-img" src="icons/Warstwa 32.png">
+          <img class="positions-shop-img" src="icons/Warstwa 33.png">
+          <img class="positions-shop-img" src="icons/Warstwa 34.png">
+          <img class="positions-shop-img" src="icons/Warstwa 35.png">
+          <img class="positions-shop-img" src="icons/Warstwa 36.png">
+          <img class="positions-shop-img" src="icons/Warstwa 37.png">
+          <img class="positions-shop-img" src="icons/Warstwa 38.png">
+          <img class="positions-shop-img" src="icons/Warstwa 5.png">
+          <img class="positions-shop-img" src="icons/Warstwa 6.png">
+          <img class="positions-shop-img" src="icons/Warstwa 7.png">
+          <img class="positions-shop-img" src="icons/Warstwa 8.png">
+          <img class="positions-shop-img" src="icons/Warstwa 9.png">
+        </div>
 
     <!-- TODO: Stash pop stash@{0} after merging with master branch -->
     <!-- TODO: Update filter-->
