--- a/src/main/resources/templates/productPage.html
+++ b/src/main/resources/templates/productPage.html
@@ -13,6 +13,7 @@
 <body>
     <div th:replace="~{fragments/nav.html :: nav}" id="nav-placeholder"></div>
 
+<!-- TODO: Update prodouctPage visuals -->
 <div class="product-content">
     <div class="left">
         <div div class="photo">
