--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -9,7 +9,7 @@
         <div class="righttop">
             <a th:href="@{/contact}"><img th:src="@{/icons/iconmonstr-email-3-240.png}"></a>
             <a th:href="@{/cart}"><img th:src="@{/icons/cart.png}"></a>
-            <a th:href="@{/account}"><img th:src="@{/icons/account.png}"></a>
+            <a th:href="@{/signInPage}"><img th:src="@{/icons/account.png}"></a>
         </div>
     </div>
     <div class="middlenav">
