--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1362,6 +1362,28 @@ h2{
 }
 
 
+.form-holder{
+    width: 40vw;
+    margin: 10vh auto;
+    border: 3px solid var(--light);
+    border-radius: 12px;
+    padding: 20px;
+    color: var(--white);
+    justify-content: center;
+}
+
+.img-holder img{
+    width: 5vw;
+}
+
+.error-message{
+    border: 3px solid var(--light);
+    border-radius: 12px;
+    padding: 20px;
+    color: red;
+}
+
+
 
     /* TODO: Place appropriate @media and adjust them*/    
 
